[package]
name = "sample_uwp_app"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.44.0"
features = [
    "implement",
    "ApplicationModel_Core",
    "UI_Core",
    "Win32_Foundation",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging"
]

